# memora-mcp

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
docs/: OVERVIEW.md
examples/: claude-code.mcp.json
examples/omnigent-bundle/: config.yaml
scripts/: demo_roundtrip.py
src/memora_mcp/: claude_import.py  cli.py  config.py  distill.py  distiller.py  doctor.py  embedder.py  enable.py  entry.py  hooks.py  planes.py  recall.py  scrub.py  server.py  settings.py  sidecar.py  spool.py  transcript.py
