[project]
name = "memora-mcp"
version = "0.1.0"
description = "MCP server exposing Microsoft Memora as persistent semantic memory for coding agents"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Tim Wilcoxson" }]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2",
    "omegaconf>=2.3",
]

[project.scripts]
memora-mcp = "memora_mcp.entry:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memora_mcp"]
